instructions.Instructions.scala.error
Compilation error:
Instructions:15: error: reassignment to val
  n=0
   ^Instructions:17: error: not found: value n
  n=n+1
  ^