instructions.Instructions.scala.code

brushDown()

for (n<- 0 to 2)
  forward()

for (n<- 0 to 2)
{right()}
  



for (n<- 0 to 2)

  n=0
  backward()
  n=n+1



left()



brushUp()
forward()